--- a/src/app/sintomas/components/sintomas-lista/sintomas-lista.component.html
+++ b/src/app/sintomas/components/sintomas-lista/sintomas-lista.component.html
@@ -11,9 +11,12 @@
 <ion-content>
     <ion-list>
         <ion-item *ngFor="let remedio of remedios">
+            <ion-thumbnail>
+                <img [src]="remedio.logoUrl" alt="remedio.titulo" />
+            </ion-thumbnail>
             <ion-label class="remedio-descricao">
-                <h1>{{remedio.nome}}</h1>
-                <h2>{{remedio.descricao}}</h2>
+                <h1>{{remedio.titulo}}</h1>
+                <h2>{{remedio.subtitulo}}</h2>
                 <h3>
                     <strong>
                         {{remedio.fabricante.length > 1 ? 'fabricante(es)' : 'fabricante' }}:
@@ -24,12 +27,15 @@
                         <h3 class="fabricante">{{fabricante.nome}}</h3>
                     </li>
                 </ul>
-                <h3><strong>Saldo</strong>: {{remedio.saldo}}</h3>
-                <h3><strong>Data de Validade</strong>: {{remedio.dataValidade}}</h3>
-                <h3><strong>Controlado</strong>: {{remedio.controlado}}</h3>
+                <h3><strong>ISBN</strong>: {{remedio.isbn}}</h3>
+                <h3><strong>Editora</strong>: {{remedio.editora}}</h3>
+                <h3><strong>Ano</strong>: {{remedio.ano}}</h3>
                 <ion-button [routerLink]="['edicao', remedio.id]">Editar</ion-button>
                 <ion-button (click)="excluir(remedio)">Excluir</ion-button>
             </ion-label>
+            <ion-text color="danger">
+                <h2>{{remedio.preco | currency}}</h2>
+            </ion-text>
         </ion-item>
 
     </ion-list>
