--- a/src/app/fabricante/components/fabricante-cadastro/fabricante-cadastro.component.html
+++ b/src/app/fabricante/components/fabricante-cadastro/fabricante-cadastro.component.html
@@ -28,36 +28,17 @@
         </small>
       </ion-text>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Data de nascimento: </ion-label>
-
-      <ion-datetime-button datetime="datetime"></ion-datetime-button>
-
-      <ion-modal [keepContentsMounted]="true">
-        <ng-template>
-          <ion-datetime
-            id="datetime"
-            formControlName="dataNascimento"
-            display-format="DD de MMMM de YYYY"
-            min="1930-01-01"
-            presentation="date"
-            showDefaultButtons="true"
-            doneText="Selecionar"
-            cancelText="Cancelar"
-          ></ion-datetime>
-        </ng-template>
-      </ion-modal>
-    </ion-item>
+    
     <ion-list>
       <ion-list-header>
-        <ion-label>Gênero</ion-label>
+        <ion-label>Ativo</ion-label>
       </ion-list-header>
-      <ion-radio-group name="genero" formControlName="genero">
+      <ion-radio-group name="ativo" formControlName="ativo">
         <ion-item>
-          <ion-radio slot="start" value="F">Feminino</ion-radio>
+          <ion-radio slot="start" value="A">Ativo</ion-radio>
         </ion-item>
         <ion-item>
-          <ion-radio slot="start" value="M">Masculino</ion-radio>
+          <ion-radio slot="start" value="I">Inativo</ion-radio>
         </ion-item>
       </ion-radio-group>
     </ion-list>
