--- a/src/app/sintomas/components/sintomas-cadastro/sintomas-cadastro.component.html
+++ b/src/app/sintomas/components/sintomas-cadastro/sintomas-cadastro.component.html
@@ -16,23 +16,46 @@
                 labelPlacement="floating"></ion-input>
         </ion-item>
 
-        <ion-note class="ion-padding" color="danger" *ngIf="sintomaForm.get('titulo')?.invalid &&
-        (sintomaForm.get('titulo')?.dirty || sintomaForm.get('titulo')?.touched)">
-            <span *ngIf="sintomaForm.get('titulo')?.errors?.['required']">
+        <ion-note class="ion-padding" color="danger" *ngIf="sintomaForm.get('nome')?.invalid &&
+        (sintomaForm.get('nome')?.dirty || sintomaForm.get('nome')?.touched)">
+            <span *ngIf="sintomaForm.get('nome')?.errors?.['required']">
                 Campo obrigatório
             </span>
-            <span *ngIf="sintomaForm.get('titulo')?.errors?.['minlength']">
+            <span *ngIf="sintomaForm.get('nome')?.errors?.['minlength']">
                 O tamanho mínimo são 3 caracteres
             </span>
         </ion-note>
 
-        <ion-note class="ion-padding" color="danger" *ngIf="sintomaForm.get('nomeSintomas')?.invalid &&
-                (sintomaForm.get('nomeSintomas')?.dirty || sintomaForm.get('nomeSintomas')?.touched)">
-            <span *ngIf="sintomaForm.get('nomeSintomas')?.errors?.['min']">
-                O valor deve ser no mínimo 5
+        <ion-note class="ion-padding" color="danger" *ngIf="sintomaForm.get('ativo')?.invalid &&
+                (sintomaForm.get('ativo')?.dirty || sintomaForm.get('ativo')?.touched)">
+            <span *ngIf="sintomaForm.get('ativo')?.errors?.['required']">
+                Campo obrigatório
             </span>
         </ion-note>
- 
+
+        <ion-item>
+            <ion-item>
+                <ion-select formControlName="remedio" label="remedio(es)" value="" multiple="true"
+                    placeholder="Selecione os remedios" [compareWith]="compareWith">
+                    <ion-select-option *ngFor="let remedio of remedio" [value]="remedio">
+                        {{remedio.nome}}
+                    </ion-select-option>
+                </ion-select>
+            </ion-item>
+        </ion-item>
+        
+        <ion-note class="ion-padding" color="danger" *ngIf="sintomaForm.get('remedio')?.invalid &&
+        (sintomaForm.get('remedio')?.dirty || sintomaForm.get('remedio')?.touched)">
+            <span *ngIf="sintomaForm.get('remedio')?.errors?.['remedioInvalido']">
+                Devem ser selecionados no mínimo 1 remedio e no máximo 10.
+            </span>
+        </ion-note>
+
+        <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+            <ion-button type="submit" [disabled]="sintomaForm.invalid">
+                <ion-icon name="checkmark"></ion-icon>
+            </ion-button>
+        </ion-fab>
 
     </form>
 
