--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,48 +1,79 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Consulta Remedios app</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-app>
+  <ion-menu side="start" contentId="main-content">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item [routerLink]="['/remedios']" routerDirection="root">
+          <ion-icon name="book" slot="start"></ion-icon>
+          <ion-label>Remedios</ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['/fabricante']" routerDirection="root">
+          <ion-icon name="people-circle" slot="start"></ion-icon>
+          <ion-label>Fabricante</ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['/sintomas']" routerDirection="root">
+          <ion-icon name="people-circle" slot="start"></ion-icon>
+          <ion-label>Sintomas</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
 
-<ion-content>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>
-        Bem-vindo ao Consulta Remedios App!
-      </ion-card-title>
-      <ion-card-subtitle>
-        Gerencie seus remedios utilizando o melhor app do mercado!
-      </ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      Cadastre os seus remedios e fabricante e os tenha sempre em mão!
-    </ion-card-content>
-  </ion-card>
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Consulta Remedios app</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-  <ion-row>
-    <ion-col>
-      <ion-card>
-        <ion-card-header [routerLink]="['/remedios']">
-          <ion-card-title>
-            <ion-icon name="book" class="ion-float-left ion-margin-end"></ion-icon>
+  <ion-content>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          Bem-vindo ao Consulta Remedios App!
+        </ion-card-title>
+        <ion-card-subtitle>
+          Gerencie seus remedios utilizando o melhor app do mercado!
+        </ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Cadastre os seus remedios e fabricante e os tenha sempre em mão!
+      </ion-card-content>
+    </ion-card>
+
+    <ion-row>
+      <ion-col size="4">
+        <ion-card>
+          <ion-button expand="full" [routerLink]="['/remedios']">
+            <ion-icon name="book" slot="start"></ion-icon>
             Remedios
-          </ion-card-title>
-        </ion-card-header>
-      </ion-card>
-    </ion-col>
-    <ion-col>
-      <ion-card>
-        <ion-card-header [routerLink]="['/fabricante']">
-          <ion-card-title>
-            <ion-icon name="people-circle" class="ion-float-left ion-margin-end"></ion-icon>
-            fabricante
-          </ion-card-title>
-        </ion-card-header>
-      </ion-card>
-    </ion-col>
-  </ion-row>
-</ion-content>
+          </ion-button>
+        </ion-card>
+      </ion-col>
+      <ion-col size="4">
+        <ion-card>
+          <ion-button expand="full" [routerLink]="['/fabricante']">
+            <ion-icon name="people-circle" slot="start"></ion-icon>
+            Fabricante
+          </ion-button>
+        </ion-card>
+      </ion-col>
+      <ion-col size="4">
+        <ion-card>
+          <ion-button expand="full" [routerLink]="['/sintomas']">
+            <ion-icon name="people-circle" slot="start"></ion-icon>
+            Sintoma
+          </ion-button>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-content>
+</ion-app>
