--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,15 +8,15 @@
     <ion-content>
       <ion-list>
         <ion-item [routerLink]="['/remedios']" routerDirection="root">
-          <ion-icon name="book" slot="start"></ion-icon>
+          <ion-icon name="medkit" slot="start"></ion-icon>
           <ion-label>Remedios</ion-label>
         </ion-item>
-        <ion-item [routerLink]="['/fabricante']" routerDirection="root">
+        <ion-item [routerLink]="['/fabricantes']" routerDirection="root">
           <ion-icon name="people-circle" slot="start"></ion-icon>
           <ion-label>Fabricante</ion-label>
         </ion-item>
         <ion-item [routerLink]="['/sintomas']" routerDirection="root">
-          <ion-icon name="people-circle" slot="start"></ion-icon>
+          <ion-icon name="thermometer" slot="start"></ion-icon>
           <ion-label>Sintomas</ion-label>
         </ion-item>
       </ion-list>
@@ -30,7 +30,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Consulta Remedios app</ion-title>
+      <ion-title>Consulta Remedios</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -45,7 +45,7 @@
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        Cadastre os seus remedios e fabricante e os tenha sempre em mão!
+        Cadastre os seus remedios e fabricante e os tenha sempre em mãos!
       </ion-card-content>
     </ion-card>
 
@@ -53,24 +53,24 @@
       <ion-col size="4">
         <ion-card>
           <ion-button expand="full" [routerLink]="['/remedios']">
-            <ion-icon name="book" slot="start"></ion-icon>
+            <ion-icon name="medkit" slot="start"></ion-icon>
             Remedios
           </ion-button>
         </ion-card>
       </ion-col>
       <ion-col size="4">
         <ion-card>
-          <ion-button expand="full" [routerLink]="['/fabricante']">
+          <ion-button expand="full" [routerLink]="['/fabricantes']">
             <ion-icon name="people-circle" slot="start"></ion-icon>
-            Fabricante
+            Fabricantes
           </ion-button>
         </ion-card>
       </ion-col>
       <ion-col size="4">
         <ion-card>
           <ion-button expand="full" [routerLink]="['/sintomas']">
-            <ion-icon name="people-circle" slot="start"></ion-icon>
-            Sintoma
+            <ion-icon name="thermometer" slot="start"></ion-icon>
+            Sintomas
           </ion-button>
         </ion-card>
       </ion-col>
