--- a/src/app/remedio/components/remedio-cadastro/remedio-cadastro.component.html
+++ b/src/app/remedio/components/remedio-cadastro/remedio-cadastro.component.html
@@ -57,30 +57,10 @@
         </ion-note>
 
         <ion-item>
-            <ion-input formControlName="validade" type="date" placeholder="Data de validade" label="Data de validade"
+            <ion-input formControlName="dataValidade" type="date" placeholder="Data de validade" label="Data de validade"
                 labelPlacement="floating"></ion-input>
         </ion-item>
 
-        <ion-item>
-            <ion-label position="floating">Data de validade: </ion-label>
-      
-            <ion-datetime-button datetime="datetime"></ion-datetime-button>
-      
-            <ion-modal [keepContentsMounted]="true">
-              <ng-template>
-                <ion-datetime
-                  id="datetime"
-                  formControlName="dataValidade"
-                  display-format="DD de MMMM de YYYY"
-                  min="1930-01-01"
-                  presentation="date"
-                  showDefaultButtons="true"
-                  doneText="Selecionar"
-                  cancelText="Cancelar"
-                ></ion-datetime>
-              </ng-template>
-            </ion-modal>
-          </ion-item>
 
         <ion-note class="ion-padding" color="danger" *ngIf="remedioForm.get('dataValidade')?.invalid &&
         (remedioForm.get('dataValidade')?.dirty || remedioForm.get('dataValidade')?.touched)">
@@ -109,10 +89,10 @@
             </ion-list-header>
             <ion-radio-group name="controlado" formControlName="controlado">
               <ion-item>
-                <ion-radio slot="start" value="C">Controlado</ion-radio>
+                <ion-radio slot="start" value="C">Sim</ion-radio>
               </ion-item>
               <ion-item>
-                <ion-radio slot="start" value="N">Controlado</ion-radio>
+                <ion-radio slot="start" value="N">Não</ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-list>
@@ -129,11 +109,12 @@
                 <ion-select formControlName="fabricante" label="fabricante(es)" value="" multiple="true"
                     placeholder="Selecione os fabricante" [compareWith]="compareWith">
                     <ion-select-option *ngFor="let fabricante of fabricante" [value]="fabricante">
-                        {{fabricante.nome}}
+                        {{fabricante.razaoSocial}}
                     </ion-select-option>
                 </ion-select>
             </ion-item>
         </ion-item>
+
 
         <ion-note class="ion-padding" color="danger" *ngIf="remedioForm.get('fabricante')?.invalid &&
         (remedioForm.get('fabricante')?.dirty || remedioForm.get('fabricante')?.touched)">
@@ -142,8 +123,8 @@
             </span>
         </ion-note>
 
-        <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-            <ion-button type="submit" [disabled]="remedioForm.invalid">
+        <ion-fab vertical="top" horizontal="end" slot="fixed">
+            <ion-button type="submit">
                 <ion-icon name="checkmark"></ion-icon>
             </ion-button>
         </ion-fab>
